style.css
/* ... */
#pageFooter img {
	width: 2rem;
}

#pageFooterWithLove {
	background-color: var(--accentBG);
	padding: .5rem;
	font-style: italic;
	border: 2px ridge var(--accentBGalt);
}

/* articles hash */
#articleSearch {
	display: block;
	margin: 0 auto;
	width: 15rem;
	border: 3px groove var(--accent);
	background-color: transparent;
	padding: .3rem;
}

#articleList {
	display: flex;
	gap: .5rem;
	margin-top: 1rem;
	flex-flow: column nowrap;
	list-style-type: none;
}

#articleList a {
	margin: 0 auto;
	width: 90%;
	background-color: var(--accentBG);
	padding: .5rem;
	border: 3px groove var(--accent);
}

#articleList a li {
	display: flex;
	justify-content: space-between;
}

/* resource hash */
#resourceGuides {
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
	align-items: center;
	gap: .5rem;
	margin-bottom: 1rem;
}

#resourceGuides a {
	flex: 1;
	height: 14rem;
	min-height: 12rem;
	max-width: 14rem;
	min-width: 12rem;
	text-decoration: none;
	border: 3px ridge var(--accent);
}

#resourceHTML {
	background-image: linear-gradient(to right bottom, rgb(0 0 0 / .8), var(--primaryBG)), url('/media/img/resourceHTML.png');
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.2rem;
	text-shadow: 2px 2px var(--accent);
}

#resourceContainer {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
	grid-auto-rows: max-content;
	gap: 1.2rem;
	margin-top: 1rem;
	text-decoration: none;
}

#resourceContainer a {
	text-decoration: none;
	color: var(--accent);
	background: linear-gradient(to bottom right, var(--accentBG), var(--primaryBG));
	border: 3px ridge var(--accentBGalt);
	height: 100%;
	padding: .4rem;
}

#resourceContainer a p {
	border: none;
	padding: 0;
	margin: 0;
	text-indent: 0;
	text-align: center;
	margin-bottom: 0.5rem;
	text-decoration: none;
}

.resGrid {
	display: flex;
	flex-flow: column nowrap;
	gap: 1rem;
}

.resGrid div {
	background-color: var(--primaryBG);
	color: var(--text);
	padding: 0.4rem;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	width: 100%;
}

.resGrid div p {
	margin-right: 2rem;
	margin-left: .5rem;
	margin-bottom: 1rem;
}

.resGrid div p img {
	float: right;
	margin-left: 1rem;
	margin-bottom: 1rem;
}

/* quotes hash */
#quotes {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
	grid-auto-rows: max-content;
	gap: 1.2rem;
	margin-top: 1rem;
}

#quotes blockquote {
	background-color: var(--accentBGalt);
	padding: 1rem;
	border: 2px groove var(--accent);
	display: flex;
	gap: .5rem;
	flex-direction: column;
	height: min-content;
}

#quotes blockquote div {
	padding: 0.5rem;
	border: 2px groove var(--accent);
	text-indent: 1rem;
	line-height: 1.3rem;
}

#quotes blockquote p {
	text-align: center;
	border-left: none;
	text-indent: 0;
	margin-bottom: 0;
	background-color: var(--primaryBG);
	padding: 0.6rem;
	border: 3px ridge rgb(2, 2, 2);
	font-size: 1rem;
}

/* about hash */
#aboutFoot {
	display: flex;
	flex-flow: row wrap;
	width: 100%;
	justify-content: center;
	align-items: center;
}

#aboutFoot #asciiPipe {
	font-size: .3rem;
}

#aboutFoot #aboutIconRow {
	padding: .5rem;
	background-color: var(--accentBG);
	border: 2px ridge var(--accent);
}

/* contact hash */
#contactEmails {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	justify-content: center;
	gap: 2rem;
}

#contactEmails a {
	margin: auto;
	text-decoration: none;
	color: var(--secondary);
	padding: 0.3rem;
	background-color: var(--accentBGalt);
	border: 4px outset var(--text);
}

#contactForm {
	display: flex;
	flex-flow: column nowrap;
	max-width: 24rem;
	margin: 0 auto;
	font-size: 1.2rem;
	text-align: center;
}

#contactForm label {
	margin-top: .5rem;
	margin-bottom: .2rem;
}

#contactForm input,
#contactForm textarea {
	border: 2px ridge var(--accent);
	padding: .2rem;
	background-color: transparent;
	font-size: .85rem;
	font-family: Consolas, 'Liberation Mono', 'Adwaita Mono', monospace;
}

#contactForm button {
	width: 5rem;
	padding: .2rem .5rem;
	border-radius: 0;
	color: var(--secondary);
	border-color: var(--text);
	background-color: var(--accentBG);
	margin: 0 auto;
	margin-top: 1rem;
	cursor: pointer;
}

/* index media query */
@media screen and (max-width: 1050px) {
	#pageContainer {
		grid-template-areas:
			"header  header"
			"navbar  navbar"
			"main main"
			"sidebar sidebar"
			"footer  footer";
	}

	#smokeLounge {
		display: none;
		/* perhaps change later? */
	}

	#pageHeader {
		flex-flow: column nowrap;
	}

	#pageNavbar ul {
		display: flex;
		flex-flow: row wrap;
		justify-content: center;
		align-items: center;
		height: 100%;
		gap: 1rem;
	}

	#pageNavbar ul li {
		min-width: 45%;
	}

	#pageSidebar {
		border-right: none;
	}

	#pageSidebar #pageButtonMarquee {
		display: none;
	}
}

/* marquee animation */
.marquee img {
	-moz-animation: scroll-left 6s linear infinite;
	-webkit-animation: scroll-left 6s linear infinite;
	animation: scroll-left 6s linear infinite;
	height: 31px;
}

@keyframes scroll-left {
	0% {
		-moz-transform: translateX(270%);
		-webkit-transform: translateX(270%);
		transform: translateX(270%);
	}

	100% {
		-moz-transform: translateX(-270%);
		-webkit-transform: translateX(-270%);
		transform: translateX(-270%);
	}
}

/* standard figure component */
.standardCard {
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
	float: right;
	margin: 0 0 1rem 1rem;
}

.standardCard img {
	max-width: 13rem;
	border: 4px outset var(--accent);
}

.standardCard figcaption {
	max-width: 12rem;
	border: 4px outset var(--accent);
	border-top: none;
	font-size: .8rem;
	padding: .5rem;
	text-align: center;
}

.bigFigureImg {
	max-width: 95%;
	margin: 0 auto;
	display: block;
	border: 4px outset var(--accent);
}
/* ... */

